# square_api

./: Cargo.toml  README.md  build.rs  url
examples/: accept_dispute.rs  accumulate_loyalty_points.rs  add_group_to_customer.rs  adjust_loyalty_points.rs  batch_change_inventory.rs  batch_delete_catalog_objects.rs  batch_retrieve_catalog_objects.rs  batch_retrieve_inventory_changes.rs  batch_retrieve_inventory_counts.rs  batch_retrieve_orders.rs  batch_upsert_catalog_objects.rs  bulk_create_team_members.rs  bulk_create_vendors.rs  bulk_retrieve_vendors.rs  bulk_update_team_members.rs  bulk_update_vendors.rs  bulk_upsert_customer_custom_attributes.rs  calculate_loyalty_points.rs  calculate_order.rs  cancel_booking.rs  cancel_invoice.rs  cancel_loyalty_promotion.rs  cancel_payment.rs  cancel_payment_by_idempotency_key.rs  cancel_subscription.rs  cancel_terminal_action.rs  cancel_terminal_checkout.rs  cancel_terminal_refund.rs  capture_transaction.rs  catalog_info.rs  clone_order.rs  complete_payment.rs  create_booking.rs  create_break_type.rs  create_card.rs  create_catalog_image.rs  create_checkout.rs  create_customer.rs  create_customer_card.rs  create_customer_custom_attribute_definition.rs  (+185 more)
src/: lib.rs  model.rs  request.rs
src/model/: accept_dispute_response.rs  accepted_payment_methods.rs  accumulate_loyalty_points_required.rs  accumulate_loyalty_points_response.rs  ach_details.rs  add_group_to_customer_response.rs  additional_recipient.rs  address.rs  adjust_loyalty_points_response.rs  afterpay_details.rs  application_details.rs  appointment_segment.rs  availability.rs  bank_account.rs  bank_account_created_webhook.rs  bank_account_created_webhook_data.rs  bank_account_created_webhook_object.rs  bank_account_disabled_webhook.rs  bank_account_disabled_webhook_data.rs  bank_account_disabled_webhook_object.rs  bank_account_payment_details.rs  bank_account_verified_webhook.rs  bank_account_verified_webhook_data.rs  bank_account_verified_webhook_object.rs  batch_change_inventory_response.rs  batch_delete_catalog_objects_response.rs  batch_retrieve_catalog_objects_response.rs  batch_retrieve_inventory_changes_response.rs  batch_retrieve_inventory_counts_response.rs  batch_retrieve_orders_response.rs  batch_upsert_catalog_objects_response.rs  booking.rs  booking_created_webhook.rs  booking_created_webhook_data.rs  booking_created_webhook_object.rs  booking_creator_details.rs  booking_updated_webhook.rs  booking_updated_webhook_data.rs  booking_updated_webhook_object.rs  break_.rs  (+762 more)
src/request/: accept_dispute.rs  accumulate_loyalty_points.rs  add_group_to_customer.rs  adjust_loyalty_points.rs  batch_change_inventory.rs  batch_delete_catalog_objects.rs  batch_retrieve_catalog_objects.rs  batch_retrieve_inventory_changes.rs  batch_retrieve_inventory_counts.rs  batch_retrieve_orders.rs  batch_upsert_catalog_objects.rs  bulk_create_team_members.rs  bulk_create_vendors.rs  bulk_retrieve_vendors.rs  bulk_update_team_members.rs  bulk_update_vendors.rs  bulk_upsert_customer_custom_attributes.rs  calculate_loyalty_points.rs  calculate_order.rs  cancel_booking.rs  cancel_invoice.rs  cancel_loyalty_promotion.rs  cancel_payment.rs  cancel_payment_by_idempotency_key.rs  cancel_subscription.rs  cancel_terminal_action.rs  cancel_terminal_checkout.rs  cancel_terminal_refund.rs  capture_transaction.rs  catalog_info.rs  clone_order.rs  complete_payment.rs  create_booking.rs  create_break_type.rs  create_card.rs  create_catalog_image.rs  create_checkout.rs  create_customer.rs  create_customer_card.rs  create_customer_custom_attribute_definition.rs  (+185 more)
